--- a/jardin.ui
+++ b/jardin.ui
@@ -227,6 +227,13 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="3">
+        <widget class="QPushButton" name="videoPushButton">
+         <property name="text">
+          <string>Show video</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
