--- a/jardin.ui
+++ b/jardin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>798</width>
-    <height>678</height>
+    <width>808</width>
+    <height>665</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -174,55 +174,59 @@
        <attribute name="title">
         <string>Youtube</string>
        </attribute>
-       <widget class="QWidget" name="">
-        <property name="geometry">
-         <rect>
-          <x>40</x>
-          <y>21</y>
-          <width>721</width>
-          <height>391</height>
-         </rect>
-        </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_4">
-         <item>
-          <widget class="QTableWidget" name="youtubeTableWidget">
-           <property name="minimumSize">
-            <size>
-             <width>600</width>
-             <height>0</height>
-            </size>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout_3">
-           <item>
-            <spacer name="verticalSpacer_4">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="youtubeLineEdit"/>
-           </item>
-           <item>
-            <widget class="QPushButton" name="ytBuscarPushButton">
-             <property name="text">
-              <string>Buscar</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </widget>
+       <layout class="QVBoxLayout" name="verticalLayout_8">
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QTableWidget" name="youtubeTableWidget">
+            <property name="minimumSize">
+             <size>
+              <width>600</width>
+              <height>0</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <layout class="QVBoxLayout" name="verticalLayout_3">
+            <item>
+             <spacer name="verticalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>120</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QComboBox" name="youtubeComboBox">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="editable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="ytBuscarPushButton">
+              <property name="text">
+               <string>Buscar</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+         </layout>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
@@ -235,31 +239,12 @@
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="3">
+       <item row="0" column="2">
         <widget class="QPushButton" name="videoPushButton">
          <property name="text">
           <string>Show video</string>
          </property>
         </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="subtitleLineEdit"/>
-       </item>
-       <item row="1" column="3">
-        <widget class="QLineEdit" name="tagLineEdit"/>
-       </item>
-       <item row="0" column="4">
-        <widget class="QDial" name="volumeDial"/>
-       </item>
-       <item row="1" column="4">
-        <widget class="QPushButton" name="salirPushButton">
-         <property name="text">
-          <string>Salir</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QLineEdit" name="titleLineEdit"/>
        </item>
        <item row="0" column="0" rowspan="2">
         <layout class="QVBoxLayout" name="verticalLayout">
@@ -306,6 +291,22 @@
          </item>
         </layout>
        </item>
+       <item row="1" column="2">
+        <widget class="QLineEdit" name="tagLineEdit"/>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="titleLineEdit"/>
+       </item>
+       <item row="1" column="3">
+        <widget class="QPushButton" name="salirPushButton">
+         <property name="text">
+          <string>Salir</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QDial" name="volumeDial"/>
+       </item>
       </layout>
      </widget>
     </item>
@@ -316,7 +317,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>798</width>
+     <width>808</width>
      <height>22</height>
     </rect>
    </property>
@@ -325,7 +326,6 @@
  </widget>
  <tabstops>
   <tabstop>tabWidget</tabstop>
-  <tabstop>subtitleLineEdit</tabstop>
   <tabstop>titleLineEdit</tabstop>
   <tabstop>tagLineEdit</tabstop>
   <tabstop>downPushButton</tabstop>
