--- a/jardin.ui
+++ b/jardin.ui
@@ -232,21 +232,20 @@
     </item>
     <item>
      <widget class="QFrame" name="frame">
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>170</height>
+       </size>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="2">
-        <widget class="QPushButton" name="videoPushButton">
-         <property name="text">
-          <string>Show video</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0" rowspan="2">
+      <layout class="QHBoxLayout" name="horizontalLayout_7">
+       <item>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
           <widget class="QPushButton" name="playPushButton">
@@ -291,21 +290,71 @@
          </item>
         </layout>
        </item>
-       <item row="1" column="2">
-        <widget class="QLineEdit" name="tagLineEdit"/>
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_10">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_5">
+           <item>
+            <widget class="QLabel" name="infoLabel">
+             <property name="text">
+              <string/>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="errorLabel">
+             <property name="text">
+              <string/>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_6">
+           <item>
+            <widget class="QLineEdit" name="titleLineEdit"/>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="tagLineEdit"/>
+           </item>
+          </layout>
+         </item>
+        </layout>
        </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="titleLineEdit"/>
-       </item>
-       <item row="1" column="3">
-        <widget class="QPushButton" name="salirPushButton">
+       <item>
+        <widget class="QLabel" name="errorLabel_2">
          <property name="text">
-          <string>Salir</string>
+          <string/>
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
-        <widget class="QDial" name="volumeDial"/>
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_9">
+         <item>
+          <widget class="QDial" name="volumeDial"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="videoPushButton">
+           <property name="text">
+            <string>Show video</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="salirPushButton">
+           <property name="text">
+            <string>Salir</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
