--- a/iconos.qrc
+++ b/iconos.qrc
@@ -1,5 +1,8 @@
 <RCC>
   <qresource prefix="iconos">
+    <file>stop.png</file>
+    <file>pause.png</file>
+    <file>play.png</file>
     <file>antena.png</file>
   </qresource>
 </RCC>
