--- a/jardin.ui
+++ b/jardin.ui
@@ -255,6 +255,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="pausePushButton">
+           <property name="text">
+            <string>Pause</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="stopPushButton">
            <property name="text">
             <string>Stop</string>
@@ -315,6 +322,13 @@
             </widget>
            </item>
           </layout>
+         </item>
+         <item>
+          <widget class="QSlider" name="timeSlider">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_6">
