--- a/jardin.ui
+++ b/jardin.ui
@@ -31,7 +31,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="favoritosTab">
        <attribute name="title">
@@ -61,6 +61,9 @@
                <string>- FAV</string>
               </property>
              </widget>
+            </item>
+            <item>
+             <widget class="QComboBox" name="themeComboBox"/>
             </item>
             <item>
              <spacer name="verticalSpacer">
@@ -232,7 +235,7 @@
        <attribute name="title">
         <string>Lyrics</string>
        </attribute>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>2</x>
